# ArcticRayTracer

./: .gitignore  CMakeLists.txt  README.md  img.ppm  main.cpp
.cache/clangd/index/: ABConst.h.BDF5E982BD3E7D54.idx  Vec3.h.F3B73B240797C2C5.idx  camera.h.A45FDC316388CA10.idx  color.h.A8474FF28BE16AC0.idx  hittable.h.EF4BAC9D6EE4FD9C.idx  hittable_list.h.9549F618A2114C54.idx  interval.h.67C9C105E5623906.idx  main.cpp.3963840609095678.idx  ray.h.95425C068D63A2B8.idx  sphere.h.FEADFED16AB2B041.idx
include/: ABConst.h  Vec3.h  aabb.h  bvh.h  camera.h  color.h  hittable.h  hittable_list.h  interval.h  material.h  ray.h  sphere.h
